--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,5 +4,27 @@ body {
 
 h1 {
     color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: double;
+    border-color: white;
+    border-width: 18px;
+    width: 59%;
 }
+
+.fortuneTeller {
+    background-image: url(assets\images\Psychic.jhttps://assets3.thrillist.com/v1/image/1522505/size/tmg-article_default_mobile.jpgg);
+    width: 100px;
+    height: 100px;
+}
+
+#footer {
+    width: 100%;
+    height: 275px;
+    background-image: url(https://www.guardian-angel-reading.com/uploads/2018/02/PA_SEO_209_Psychic_Dreams-624x245.jpg);
+    background-size: 100% 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+}
+
 
