--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,15 +11,21 @@ h1 {
     width: 59%;
 }
 
+.col-6 {
+    padding: 10px;
+}
+
 .fortuneTeller {
-    background-image: url(assets\images\Psychic.jhttps://assets3.thrillist.com/v1/image/1522505/size/tmg-article_default_mobile.jpgg);
-    width: 100px;
-    height: 100px;
+    background-image: url(https://i0.wp.com/www.psychics4today.com/wp-content/uploads/2015/04/fake-psychic-300x248.jpg);
+    width: 30%;
+    height: 300px;
+    background-size: 100% 100%;
+    margin-top: 50px;
 }
 
 #footer {
     width: 100%;
-    height: 275px;
+    height: 200px;
     background-image: url(https://www.guardian-angel-reading.com/uploads/2018/02/PA_SEO_209_Psychic_Dreams-624x245.jpg);
     background-size: 100% 100%;
     position: fixed;
