--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: teal;
+    background-color: #f17293;
 }
 
 h1 {
@@ -9,6 +9,7 @@ h1 {
     border-color: white;
     border-width: 18px;
     width: 59%;
+    margin-top: 50px;
 }
 
 .col-6 {
@@ -16,9 +17,9 @@ h1 {
 }
 
 .fortuneTeller {
-    background-image: url(https://i0.wp.com/www.psychics4today.com/wp-content/uploads/2015/04/fake-psychic-300x248.jpg);
+    background-image: url(https://media.istockphoto.com/vectors/crystal-ball-vector-id480096597?k=6&m=480096597&s=612x612&w=0&h=fG_0DWt1uSQk6UZjQLxDgUKBFjwqr_jdzIkR37-koTo=);
     width: 30%;
-    height: 300px;
+    height: 350px;
     background-size: 100% 100%;
     margin-top: 50px;
 }
@@ -26,7 +27,7 @@ h1 {
 #footer {
     width: 100%;
     height: 200px;
-    background-image: url(https://www.guardian-angel-reading.com/uploads/2018/02/PA_SEO_209_Psychic_Dreams-624x245.jpg);
+    background-image: url(https://media1.giphy.com/media/l4KihuqeuJEi9qLSM/giphy.gif);
     background-size: 100% 100%;
     position: fixed;
     left: 0;
